<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view"
     >-->


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home">

    </item>

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history">

    </item>
    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/ic_qr_code"
        android:title="@string/scan">

    </item>
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification">

    </item>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profle">

    </item>


</menu>