<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".generateqrcode.QRAmountFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textLogo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/enter_the_order_amount"
            android:textColor="@color/label_color"
            android:textSize="20sp"
            android:textStyle="bold" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTxtEnterAmt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableStart="@drawable/ic_hkd_red_sign"
                android:drawableLeft="@drawable/ic_hkd_red_sign"
                android:hint="@string/hint_enter_amount"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/loginBtnColor"
                android:textColorHint="@color/navigation_label_color"
                android:textCursorDrawable="@drawable/cursor_colors"
                android:textSize="23sp"
                app:font_name="Roboto-Regular.ttf"
                tools:ignore="RtlSymmetry" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/loginBtnColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:background="@color/loginBtnColor"
                android:padding="5dp"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="12sp" />

        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBarQrCode"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>